# rig_cli

./: .gitignore  .pre-commit-config.yaml  AGENT.md  CLAUDE.md  Makefile  README.md  conftest.py  pyproject.toml
.claude/commands/: test.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  v1.0-MILESTONE-AUDIT.md  v1.1-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md  v1.5-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.1-MILESTONE-AUDIT.md  v1.1-REQUIREMENTS.md  v1.1-ROADMAP.md  v1.2-REQUIREMENTS.md  v1.2-ROADMAP.md  v1.3-chase-bliss-pedal-support-REQUIREMENTS.md  v1.3-chase-bliss-pedal-support-ROADMAP.md  v1.4-architecture-type-integrity-REQUIREMENTS.md  v1.4-architecture-type-integrity-ROADMAP.md  v1.5-REQUIREMENTS.md  v1.6-MILESTONE-AUDIT.md  v1.6-ROADMAP.md
.planning/phases/01-cba-tech-debt-cleanup/: 01-01-PLAN.md  01-DISCUSSION-LOG.md  01-REVIEW.md  01-VALIDATION.md  (+1 more)
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
src/rig/: cli.py  interaction.py  log_setup.py
src/rig_cli.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: fakes.py  test_appliers.py  test_apply.py  test_base_helpers.py  test_catalog.py  test_cli.py  test_cli_plan.py  test_devices.py  test_diff.py  test_ingest_hx.py  test_ingest_mc6.py  test_ingest_scene.py  test_loader.py  test_logging.py  test_mc6_generator.py  test_mc6_sysex.py  test_midi_adapter.py  test_models.py  test_plan.py  test_plugin.py
(+267 files in other folders)
