[project]
name = "rig-cli"
version = "0.1.0"
description = "Infrastructure-as-Code CLI for guitar rigs"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "mido>=1.3",
]
optional-dependencies = { dev = ["pytest", "pytest-cov", "ruff"] }

[project.scripts]
rig = "rig.cli:app"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
