[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "rig-cli"
version = "0.1.0"
description = "Infrastructure-as-Code CLI for guitar rigs"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.12",
    "rich>=13.0",
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "jinja2>=3.0",
    "mido>=1.3",
    "python-rtmidi>=1.5",
]
optional-dependencies = { dev = ["pytest", "pytest-cov", "ruff"] }

[project.urls]
Homepage = "https://github.com/dgliwa/rig_cli"
Source = "https://github.com/dgliwa/rig_cli"

[project.scripts]
rig = "rig.cli:app"

[tool.hatch.build.targets.wheel]
packages = ["src/rig"]


[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort (import order)
    "UP",  # pyupgrade (3.12+ idioms)
]
ignore = [
    "E501",  # line-too-long — handled by ruff format
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[dependency-groups]
dev = [
    "pre-commit>=4.6.0",
]
